--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Win10 风格官网</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <!-- 引入 Font Awesome 用于图标 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- 引入 marked.js 用于解析 Markdown -->
@@ -301,8 +301,8 @@
         </div>
     </div>
 
-    <script src="js/markdown-config.js"></script>
-    <script src="js/markdown-data.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/markdown-config.js"></script>
+    <script src="./js/markdown-data.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
