--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
         </div>
     </div>
 
-    <script src="./js/markdown-config.js"></script>
-    <script src="./js/markdown-data.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/markdown-config.js"></script>
+    <script src="js/markdown-data.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
