--- a/fireworks.html
+++ b/fireworks.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: #000; /* 如果需要透明背景，改为 transparent */
+            background: transparent; /* 如果需要透明背景，改为 transparent */
             overflow: hidden;
             width: 100vw;
             height: 100vh;
@@ -173,4 +173,5 @@
         loop();
     </script>
 </body>
+
 </html>
