--- a/chunlian.html
+++ b/chunlian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>动态春联 Widget</title>
+    <title>动态春联 Widget - 增强纹理版</title>
     <style>
         :root {
             --default-red: #d32f2f;
@@ -31,10 +31,10 @@
             position: relative; z-index: 1;
         }
 
-        /* 基础纸张底纹层 */
+        /* 基础纸张底纹层 - 调高透明度确保底纹可见 */
         .pattern-layer {
             position: absolute; top: 0; left: 0; right: 0; bottom: 0;
-            z-index: -1; opacity: 0.15; pointer-events: none;
+            z-index: -1; opacity: 0.4; pointer-events: none;
         }
 
         /* 文字包装盒 */
@@ -78,62 +78,68 @@
 
         .char-box span { line-height: 1; z-index: 2; }
 
-        /* 10 种底纹背景 (示例) */
+        /* --- 修复后的 9 种底纹背景 --- */
+        
         /* 1. 经典波点 */
         .style-1 { 
-            background-image: radial-gradient(circle at 2px 2px, currentColor 1px, transparent 0); 
-            background-size: 20px 20px; 
+            background-image: radial-gradient(circle at 2px 2px, rgba(255,255,255,0.25) 1.5px, transparent 0); 
+            background-size: 24px 24px; 
         }
 
         /* 2. 垂直细线条 */
         .style-2 { 
-            background-image: linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px); 
-            background-size: 20px 20px; 
+            background-image: linear-gradient(90deg, rgba(255,255,255,.3) 1px, transparent 1px); 
+            background-size: 18px 18px; 
         }
 
         /* 3. 经典方格网 */
         .style-3 { 
-            background-image: linear-gradient(rgba(255,255,255,.05) 1px, transparent 1px), 
-                            linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px); 
+            background-image: linear-gradient(rgba(255,255,255,0.3) 1px, transparent 1px), 
+                              linear-gradient(90deg, rgba(255,255,255,0.3) 1px, transparent 1px); 
             background-size: 20px 20px; 
         }
 
         /* 4. 斜向条纹 */
         .style-4 { 
-            background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,.03) 10px, rgba(255,255,255,.03) 20px); 
+            background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,.2) 10px, rgba(255,255,255,.2) 20px); 
         }
 
-        /* 5. 蜂窝六角感（利用菱形叠加） */
+        /* 5. 蜂窝纹理 */
         .style-5 { 
             background: 
-                radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.03) 21%, rgba(255,255,255,.03) 34%, transparent 35%, transparent),
-                radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.03) 21%, rgba(255,255,255,.03) 34%, transparent 35%, transparent);
+                radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,0.3) 21%, rgba(255,255,255,0.3) 34%, transparent 35%, transparent),
+                radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,0.3) 21%, rgba(255,255,255,0.3) 34%, transparent 35%, transparent);
             background-size: 40px 40px;
         }
 
-        /* 6. 复古交叉线 */
+        /* 6. 菱形格纹 */
         .style-6 { 
-            background: radial-gradient(circle, transparent 20%, #000 20%, #000 80%, transparent 80%, transparent),
-                        radial-gradient(circle, transparent 20%, #000 20%, #000 80%, transparent 80%, transparent) 25px 25px;
-            background-size: 50px 50px;
+            background-image: 
+                linear-gradient(45deg, rgba(255,255,255,0.3) 25%, transparent 25%), 
+                linear-gradient(-45deg, rgba(255,255,255,0.3) 25%, transparent 25%), 
+                linear-gradient(45deg, transparent 75%, rgba(255,255,255,0.3) 75%), 
+                linear-gradient(-45deg, transparent 75%, rgba(255,255,255,0.3) 75%);
+            background-size: 40px 40px;
         }
 
         /* 7. 现代大波点 */
         .style-7 { 
-            background-image: radial-gradient(rgba(255,255,255,.05) 2px, transparent 2px); 
-            background-size: 40px 40px; 
+            background-image: radial-gradient(rgba(255,255,255,.3) 3px, transparent 3px); 
+            background-size: 45px 45px; 
         }
 
-        /* 8. 柔和渐变底色（非纹理） */
+        /* 8. 中式洒金感 */
         .style-8 { 
-            background: radial-gradient(circle at center, rgba(50, 50, 50, 0.2) 0%, transparent 70%); 
+            background-image: radial-gradient(circle at 10% 20%, rgba(255,255,255,0.3) 1px, transparent 10%),
+                              radial-gradient(circle at 80% 60%, rgba(255,255,255,0.3) 2px, transparent 15%);
+            background-size: 50px 50px;
         }
 
-        /* 9. SVG 噪点纹理（你保留的那个） */
+        /* 9. SVG 噪点纹理 (宣纸质感) */
         .style-9 { 
-            filter: contrast(150%); 
-            background: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65'/%3E%3Crect width='100%25' height='100%25' /%3E%3C/svg%3E"); 
-            opacity: 0.05; /* 噪点通常建议降低不透明度，否则太刺眼 */
+            filter: contrast(170%) brightness(110%); 
+            background: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3Crect width='100%25' height='100%25' /%3E%3C/svg%3E"); 
+            opacity: 0.3 !important;
         }
     </style>
 </head>
@@ -146,12 +152,12 @@
     <script>
         const params = new URLSearchParams(window.location.search);
         const type = params.get('type') || 'banner';
-        const text = params.get('text') || (type === 'fu' ? '福' : '一马当先');
+        const text = params.get('text') || (type === 'fu' ? '福' : '吉祥如意');
         const bgParam = params.get('bg');
         const colorParam = params.get('color');
         const shadowParam = params.get('shadow');
         const styleIndex = params.get('style') || '1';
-        const wadangPattern = params.get('pattern') || '1'; // 瓦当模式
+        const wadangPattern = params.get('pattern') || '1';
 
         const app = document.getElementById('app');
         const container = document.getElementById('text-container');
@@ -164,38 +170,18 @@
         if (shadowParam === 'none') app.style.boxShadow = 'none';
         else if (shadowParam) app.style.setProperty('--dynamic-shadow', formatColor(shadowParam));
 
+        // 应用底纹样式
         patternBg.classList.add('style-' + styleIndex);
 
-        // 团花博物馆 (SVG 模板库)
         const wadangLibrary = {
-            '1': `
-                <svg class="wadang-svg" viewBox="0 0 100 100">
-                    <circle cx="50" cy="50" r="46" stroke-dasharray="3,3" />
-                    <circle cx="50" cy="50" r="38" opacity="0.4" stroke-width="0.8" />
-                    <path d="M50 4 L50 15 M96 50 L85 50 M50 96 L50 85 M4 50 L15 50" />
-                </svg>`,
-            '2': `
-                <svg class="wadang-svg" viewBox="0 0 100 100">
-                    <circle cx="50" cy="50" r="46" stroke-width="2" />
-                    <circle cx="50" cy="50" r="42" stroke-width="0.5" opacity="0.5" />
-                    <circle cx="50" cy="50" r="34" stroke-dasharray="1,4" stroke-width="3" />
-                </svg>`,
-            '3': `
-                <svg class="wadang-svg" viewBox="0 0 100 100">
-                    <path d="M10 50 A40 40 0 1 1 90 50 A40 40 0 1 1 10 50" stroke-width="1" />
-                    <path d="M25 25 Q50 10 75 25 M75 75 Q50 90 25 75" opacity="0.4" />
-                    <circle cx="50" cy="50" r="5" fill="currentColor" opacity="0.2" />
-                </svg>`,
-            '4': `
-                <svg class="wadang-svg" viewBox="0 0 100 100">
-                    <path d="M50 10 V90 M10 50 H90" stroke-width="0.5" opacity="0.3" />
-                    <rect x="15" y="15" width="70" height="70" rx="35" stroke-width="1.2" />
-                </svg>`
+            '1': `<svg class="wadang-svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="46" stroke-dasharray="3,3" /><circle cx="50" cy="50" r="38" opacity="0.4" stroke-width="0.8" /><path d="M50 4 L50 15 M96 50 L85 50 M50 96 L50 85 M4 50 L15 50" /></svg>`,
+            '2': `<svg class="wadang-svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="46" stroke-width="2" /><circle cx="50" cy="50" r="42" stroke-width="0.5" opacity="0.5" /><circle cx="50" cy="50" r="34" stroke-dasharray="1,4" stroke-width="3" /></svg>`,
+            '3': `<svg class="wadang-svg" viewBox="0 0 100 100"><path d="M10 50 A40 40 0 1 1 90 50 A40 40 0 1 1 10 50" stroke-width="1" /><path d="M25 25 Q50 10 75 25 M75 75 Q50 90 25 75" opacity="0.4" /><circle cx="50" cy="50" r="5" fill="currentColor" opacity="0.2" /></svg>`,
+            '4': `<svg class="wadang-svg" viewBox="0 0 100 100"><path d="M50 10 V90 M10 50 H90" stroke-width="0.5" opacity="0.3" /><rect x="15" y="15" width="70" height="70" rx="35" stroke-width="1.2" /></svg>`
         };
 
         const selectedWadang = wadangPattern === 'none' ? '' : (wadangLibrary[wadangPattern] || wadangLibrary['1']);
 
-        // 生成带团花的汉字
         text.split('').forEach(char => {
             const charBox = document.createElement('div');
             charBox.className = 'char-box';
@@ -203,7 +189,7 @@
             container.appendChild(charBox);
         });
 
-        // 动态字号计算
+        // 布局与字号适配
         if (type === 'banner') {
             app.classList.add('type-banner');
             const size = Math.min(18, 80 / text.length); 
